# interactive-travel-planner

./: .all-contributorsrc  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
-/: pyproject.toml
.next/: trace
backend/: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  sql_app.db  test.db  waymark_app.db
backend/migrations/: update_users_table.sql
backend/src/: sql_app.db
backend/src/app/: __init__.py  database.py  dependencies.py  deps.py  main.py  router.py
backend/src/app/core/: auth.py  config.py  database.py  security.py
backend/src/app/models/:  calendar.py  __init__.py  association.py  budget.py  calendar_event.py  category.py  collaboration.py  dates.py  destinations.py  (+6 more)
backend/tests/: test_budget.py  test_calendar.py  test_collaboration.py  test_dates.py  test_destinations.py  test_user.py
frontend/: README.md
frontend/demo/src/: App.tsx
frontend/waymark/: .prettierignore  .prettierrc.json  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
frontend/waymark/components/: NewTripForm.tsx  TripsList.tsx
frontend/waymark/src/: App.tsx
src/app/models/: category.py
v0 reference/: package.json  tailwind.config.ts
v0 reference/app/: color-preview.tsx  globals.css  page.tsx
v0 reference/app/create/: page.tsx
v0 reference/app/create-trip/: page.tsx
v0 reference/app/profile/: page.tsx
v0 reference/components/: add-friend-dialog.tsx  budget-overview.tsx  budget-range-selector.tsx  category-breakdown.tsx  currency-selector.tsx  date-range-picker.tsx  day-view.tsx  destination-card.tsx  destination-selector.tsx  expense-form.tsx  expense-list.tsx  featured-itineraries.tsx  friends-list.tsx  hero-section.tsx  how-it-works.tsx  invite-collaborator-dialog.tsx  itinerary-map.tsx  itinerary-timeline.tsx  nav-user.tsx  profile-form.tsx  quiz-completion-card.tsx  share-dialog.tsx  spending-timeline.tsx  testimonials.tsx  travelers-selector.tsx  trip-card.tsx  trip-quiz-progress.tsx  trip-type-selector.tsx
v0 reference/components/ui/: avatar-group.tsx
(+188 files in other folders)
